# img-2-.wav-2-.xlsx-2-.svg

./: .gitignore  README.md  add_border.py  convert_image_to_wav.py  delete_rows.py  drop_ever_other_column.py  fft_to_excel.py  hasher.py  invert_image.py  polyline.json  polylineScript.js  polyline_2.json  polyline_3.json  polyline_script.py  pyproject.toml  reverse_lines.sh  seperate_colors.py  spreadsheet_opener.py  squash_image.py  svg_creator.py  svg_from_spreadsheet.py  testing.py  tone_generator.py  windowing_fft_to_spreadsheet.py
